UDA Sistemi 2024 - (Ultima aggiunta redirect)

--- a/redirect.html
+++ b/redirect.html
@@ -30,6 +30,15 @@
             font-size: 2rem; 
         }
 
+        img{
+            width: 50vw;
+            height: 50vh;
+            margin-top: 5%;
+            border-radius: 50px;
+            border: dashed 10px #00509e;
+        }
+
+
         @media (max-width: 600px) { /*responsvity */
             h1 {
                 font-size: 2rem;
@@ -38,6 +47,8 @@
                 font-size: 1rem;
             }
         }
+
+
     </style>
 
     
@@ -45,5 +56,6 @@
 <body>
     <h1>Sito web istituzionale</h1>
     <h3>dell'Istituto PANETTI - PITAGORA di Bari</h3>
+    <img src="https://lh3.googleusercontent.com/places/AJDFj41Vz3YX3QGzyGFRs_s6b9fgu_GLDbcEtV7bwFbKBl-o9kR7oIfZACirqd3sokpnArdccYOf2L6jqf3eFcymND22wg4WQbAMCGc=s1600-w480">
 </body>
 </html>
