UDA Sistemi 2024 - (Immagine implementata)

--- a/redirect.html
+++ b/redirect.html
@@ -56,6 +56,6 @@
 <body>
     <h1>Sito web istituzionale</h1>
     <h3>dell'Istituto PANETTI - PITAGORA di Bari</h3>
-    <img src="https://lh3.googleusercontent.com/places/AJDFj41Vz3YX3QGzyGFRs_s6b9fgu_GLDbcEtV7bwFbKBl-o9kR7oIfZACirqd3sokpnArdccYOf2L6jqf3eFcymND22wg4WQbAMCGc=s1600-w480">
+    <img src="images/panetti.png">
 </body>
 </html>
